# sample-ai-chat

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODING.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  shared_tasks.toml  tdd-specification.md
.codex/: AGENTS.md
.cursor/: hooks.json
.cursor/rules/: code-review.mdc  documentation.mdc  python-services.mdc  web-typescript-react.mdc  zenith-core.mdc
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/hooks/: quality-gate.json
.github/instructions/: code-review.instructions.md  commit-message.instructions.md  docs.instructions.md  pull-request-description.instructions.md  python.instructions.md  typescript-react.instructions.md
.github/plugin/: plugin.json
.github/prompts/: copilotkit-contract-review.prompt.md  tdd-change.prompt.md
.github/skills/copilotkit-contracts/: SKILL.md
.github/skills/zenith-tdd/: SKILL.md
.github/workflows/: ci.yml
a2ui/: .gitignore  package.json
ag-ui/: pyproject.toml
ag-ui/src/ag_ui/: __init__.py
ag-ui/tests/: test_ag_ui_package.py
agent/: .env.example  pyproject.toml
agent/src/: __init__.py  agents.py  app.py  config.py  main.py
agent/src/lang_chain/: __init__.py  app.py  event.py  graph.py  mcp_tools.py  model.py  schemas.py  state.py  tool.py
agent/src/lang_chain/node/: __init__.py  context.py  model.py  router.py  server_tools.py
agent/src/mfa/: __init__.py  agents.py  app.py  tool.py  workflow.py
agent/tests/: test_ag_ui_package.py  test_agents.py  test_app.py  test_lang_chain_app.py  test_lang_chain_model.py  test_lang_chain_tool.py  test_main.py
bff/: pyproject.toml
bff/src/bff/: __init__.py
bff/tests/: test_bff_package.py
docs/: README.md  commit-convention.md  generative-ui.html  specification.html  tdd-specification.md
docs/html/: a2ui-guide.html  ag-ui-guide.html  api-communication-flow.html  biome-guide.html  copilotkit-guide.html  dependency-policy.html  development-rules.html  directory-structure.html  documentation-guide.html  environment-configuration.html  generative-ui-examples.html  generative-ui.html  index.html  mcp-theme-selection.html  mypy-guide.html  pre-commit-guide.html  ruff-guide.html  specification.html  test-strategy.html  workspace-overview.html
docs/spec/: a2ui-guide.md  ag-ui-guide.md  api-communication-flow.md  biome-guide.md  copilotkit-guide.md  dependency-policy.md  development-rules.md  directory-structure.md  documentation-guide.md  environment-configuration.md  generative-ui-examples.md  generative-ui.md  index.md  mcp-theme-selection.md  mypy-guide.md  pre-commit-guide.md  ruff-guide.md  specification.md  test-strategy.md  workspace-overview.md
docs/template/: README.md  article.html  design-doc.md  index.html
mcp/: .env.example  pyproject.toml
mcp/src/: dev.py  server.py
mcp/src/servers/apps_example/: __init__.py  server.py
mcp/src/servers/apps_example/ui/: __init__.py  contract.py  dashboard.py  inventory.py  map.py  monitor.py  quiz.py
mcp/src/servers/document_review/: __init__.py  mcp_apps.py  models.py  repository.py  server.py
mcp/src/servers/listing_assist/: __init__.py  mcp_apps.py  models.py  repository.py  server.py
mcp/src/servers/map_view/: __init__.py  models.py  server.py
mcp/src/servers/quote_compare/: __init__.py  mcp_apps.py  models.py  repository.py  server.py
mcp/src/servers/submission_pack/: __init__.py  mcp_apps.py  models.py  repository.py  server.py
mcp/src/shared/: env.py  icons.py  models.py
mcp/src/zenith_mcp/: __init__.py
mcp/tests/: test_zenith_mcp_package.py
scripts/: build-docs.mjs  migrate-html-to-spec.mjs
web/: .env.example  .gitignore  README.md  metadata.json  package.json  tsconfig.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/copilotkit/: route.ts
web/app/chat/[sessionId]/: page.tsx
web/components/chat/: App.test.tsx  App.tsx  ChatControlsContext.tsx  ChatInput.tsx  ConversationView.tsx  GenerativeUIInteractionContext.tsx  GenerativeUIRegistry.tsx  HomeView.tsx  MessageList.tsx  Sidebar.tsx  StableMcpAppsActivityRenderer.tsx  ZenithComposer.tsx
web/components/common/: ModelSelector.tsx  ToolSelector.tsx
web/components/generative-ui/custom/: FlightOptions.tsx  index.ts
web/components/generative-ui/declarative/: DeclarativeRenderer.test.tsx  DeclarativeRenderer.tsx  index.ts
web/components/generative-ui/open-ended/: EmbeddedAppFrame.tsx  GoogleMapFrame.tsx  index.ts
web/components/generative-ui/static/: MetricTile.tsx  ZenithPanel.tsx  index.ts
web/lib/: chat-controls.ts
web/lib/copilotkit/: agents.ts  mcp-apps.ts  middleware.ts  runtime.ts
web/lib/generative-ui/schemas/: declarative.ts  flight-options.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/_providers/: app-providers.tsx  copilot-provider.tsx
web/src/app/api/copilotkit/: route.test.ts  route.ts
web/src/app/chat/: page.tsx
web/src/app/chat/[session-id]/: page.tsx
web/src/app/providers/: copilot-provider.tsx
web/src/components/common/: Avatar.tsx  Sidebar.tsx  model-selector.tsx  tool-selector.tsx
web/src/components/layout/: App.test.tsx  App.tsx  app.test.tsx  app.tsx
web/src/components/ui/: button.tsx  dialog.tsx  input.tsx  select.tsx  spinner.tsx  textarea.tsx
web/src/features/chat/components/: chat-input.tsx  conversation-view.tsx  edit-message-form.tsx  home-view.tsx  message-item.tsx  message-list.tsx
web/src/features/chat/context/: chat-context.tsx  chat-controls-context.tsx
web/src/features/chat/generative-ui/: component.tsx  frontend-tool.tsx  mcp-apps.ts
web/src/features/chat/hooks/: use-chat-input.ts  use-chat-scroll.ts  use-chat-session.ts  use-conversation.ts  use-message-editing.ts
web/src/features/chat/lib/: build-message.ts  mcp-sandbox-html.ts  message-validation.ts
web/src/lib/: chat-controls.ts  env.ts  fetcher.ts  logger.ts
web/src/lib/copilotkit/: agents.test.ts  context.ts  middleware.ts  runtime.test.ts  runtime.ts
web/test/: setup.ts
(+29 files in other folders)
