[project]
name = "zenith-ai-chat"
version = "0.1.0"
description = "Monorepo for the Zenith AI chat application."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.3",
    "mypy>=1.18.2",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.3",
]

[tool.uv.workspace]
members = ["agent", "mcp"]

[tool.ruff]
line-length = 150
target-version = "py314"
extend-exclude = [
    ".venv",
    "web/node_modules",
    "web/dist",
]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "PERF",
    "PTH",
    "RUF",
    "S",
    "SIM",
    "T20",
    "UP",
]

ignore = [
    "E501",  # インデント表現が崩れるため、強制改行の設定を無効化する。
    "SIM117", # Prefab UIの階層構造（親子関係）をインデントで表現するため、あえてネストを許容する。
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
strict = true
pretty = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["agent", "mcp/src"]
exclude = [
    "^web/",
    "^docs/",
]

# TODO : Remove [[tool.mypy.overrides]] for src.mfa.* when agent-framework package-root typing is stable in CI, or switch to submodule imports (e.g. agent_framework._agents).
[[tool.mypy.overrides]]
module = [
    "src.mfa.agents",
    "src.mfa.workflow",
]
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "agent/tests",
    "mcp/tests",
]

[tool.bandit]
exclude_dirs = [
    ".venv",
    "web",
    "agent/tests",
    "mcp/tests",
]
