[project]
name = "zenith-ag-ui"
version = "0.1.0"
description = "Agent service for Zenith AI Chat."
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.10",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ag_ui"]
