[project]
name = "zenith-agent"
version = "0.1.0"
description = "Agent service for Zenith AI Chat."
requires-python = ">=3.14"
dependencies = [
    "agent-framework>=1.2.2",
    "fastapi>=0.115",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.32",
    "azure-identity>=1.25.3",
    "dotenv>=0.9.9",
    "dedent>=0.8.0",
    "langchain>=1.2.16",
    "langgraph>=1.1.10",
    "langchain-azure-ai>=1.2.3",
    "langchain-mcp-adapters>=0.2.2",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
