[project]
name = "zenith-mcp"
version = "0.1.0"
description = "FastMCP tool server for Zenith AI Chat."
requires-python = ">=3.14"
dependencies = [
    "fastmcp[apps]>=3.2.4",
    "pydantic>=2.10",
]

[project.scripts]
zenith-mcp = "server:main"
zenith-mcp-http = "server:main_http"
zenith-mcp-document-review = "servers.document_review.server:main"
zenith-mcp-listing-assist = "servers.listing_assist.server:main"
zenith-mcp-map-view = "servers.map_view.server:main"
zenith-mcp-quote-compare = "servers.quote_compare.server:main"
zenith-mcp-submission-pack = "servers.submission_pack.server:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/server.py", "src/servers", "src/shared"]
sources = ["src"]
